CHANGE: first commit for my personal settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,39 +1,27 @@
 # improve colors
-set -g default-terminal 'screen-256color'
+# instaed of using below, set alias tmux='tmux -2'
+# set-option -g default-terminal screen-256color
 
-# act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+# encoding
+set-window-option -g utf8 on
 
-# act like GNU screen
-unbind C-b
-set -g prefix C-a
+# status
+set-option -g status-position top
+set-option -g status-left-length 90
+set-option -g status-left '#H:[#P]'
+set-option -g status-right-length 90
+set-option -g status-right '[%Y-%m-%d(%a) %H:%M]'
+set-option -g status-utf8 on
+set-option -g status-interval 1
+set-option -g status-justify centre
 
-# start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-set-window-option -g pane-base-index 1
+# keybind
+unbind-key C-b
+set-option -g prefix C-t
+bind-key C-t send-prefix
+set-window-option -g mode-keys vi
+bind-key -t vi-copy C-n cursor-down
+bind-key -t vi-copy C-p cursor-up
+bind-key -t vi-copy C-f cursor-right
+bind-key -t vi-copy C-b cursor-left
 
-# renumber windows sequentially after closing any of them
-set -g renumber-windows on
-
-# soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
-
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
-
-# increase scrollback lines
-set -g history-limit 10000
-
-# switch to last pane
-bind-key C-a last-pane
-
-# Local config
-if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
