--- a/vim/bundle.toml
+++ b/vim/bundle.toml
@@ -2,11 +2,12 @@
 [[plugins]]
 repository = 'Shougo/vimproc.vim'
 
-	[[plugins.build]]
-	windows = 'tools\\update-dll-migw'
-	cygwin = 'make'
-	mac = 'make'
-	unix = 'make'
+  [plugins.build]
+  windows = 'tools\\update-dll-mingw'
+  cygwin = 'make -f make_cygwin.mak'
+  mac = 'make -f make_mac.mak'
+  linux = '/bin/pwd; make'
+  unix = 'gmake'
 
 [[plugins]]
 repository = 'Shougo/neocomplcache.vim'
@@ -18,6 +19,9 @@ repository = 'Shougo/neosnippet.vim'
 depends = 'Shougo/neosnippet-snippets'
 insert = 1
 filetypes = 'snippet'
+
+[[plugins]]
+repository = 'editorconfig/editorconfig'
 
 [[plugins]]
 repository = 'tpope/vim-surround'
@@ -67,9 +71,9 @@ repository = 'manicmaniac/ftcompl'
 repository = 'rking/ag.vim'
 external_commands = 'ag'
 
-	[[plugins.commands]]
-	name = 'Ag'
-	complete = 'file'
+  [plugins.commands]
+  name = 'Ag'
+  complete = 'file'
 
 [[plugins]]
 repository = 'tpope/vim-fugitive'
@@ -91,9 +95,9 @@ external_commands = 'python'
 repository = 'Shougo/vinarise.vim'
 external_commands = 'python'
 
-	[[plugins.commands]]
-	name = 'Vinarise'
-	complete = 'file'
+  [plugins.commands]
+  name = 'Vinarise'
+  complete = 'file'
 
 # colorscheme
 [[plugins]]
@@ -148,6 +152,6 @@ filetypes = 'javascript'
 external_commands = 'node'
 build_commands = 'npm'
 
-	[[plugins.build]]
-	others = 'npm install'
+  [plugins.build]
+  others = 'npm install'
 
