NEW: Mouse support and improve vi keybind

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,8 +20,17 @@ unbind-key C-b
 set-option -g prefix C-t
 bind-key C-t send-prefix
 set-window-option -g mode-keys vi
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-selection
+bind-key -t vi-copy Y copy-end-of-line
 bind-key -t vi-copy C-n cursor-down
 bind-key -t vi-copy C-p cursor-up
 bind-key -t vi-copy C-f cursor-right
 bind-key -t vi-copy C-b cursor-left
+
+# mouse
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
 
