NEW: Add split-pane keys

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,8 @@ set-option -g status-justify centre
 unbind-key C-b
 set-option -g prefix C-t
 bind-key C-t send-prefix
+bind-key | split-window -h
+bind-key - split-window -v
 set-window-option -g mode-keys vi
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-selection
@@ -29,8 +31,8 @@ bind-key -t vi-copy C-f cursor-right
 bind-key -t vi-copy C-b cursor-left
 
 # mouse
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set-window-option -g mode-mouse on
+set-option -g mouse-select-pane on
+set-option -g mouse-resize-pane on
+set-option -g mouse-select-window on
 
