--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,7 @@ set-option -g status-right '#[bg=colour234][%Y-%m-%d(%a) %H:%M]'
 set-option -g status-utf8 on
 set-option -g status-interval 1
 set-option -g status-justify centre
+set-window-option -g window-status-current-attr bright
 
 # keybind
 unbind-key C-b
