--- a/tmux.conf
+++ b/tmux.conf
@@ -10,13 +10,14 @@ set-option -g status-fg colour227
 set-option -g status-bg colour233
 set-option -g status-position top
 set-option -g status-left-length 90
-set-option -g status-left '#[bg=colour232]#H:[#P]'
+set-option -g status-left '#[bg=colour232]#H:#{pane_current_path}'
 set-option -g status-right-length 90
-set-option -g status-right '#[bg=colour234][%Y-%m-%d(%a) %H:%M]'
+set-option -g status-right '#[bg=colour234]%Y/%m/%d(%a) %H:%M'
 set-option -g status-utf8 on
 set-option -g status-interval 1
 set-option -g status-justify centre
 set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-format '[#I-#P:#W]'
 
 # keybind
 unbind-key C-b
