add yajs vim plugin to highlight es2015

--- a/vim/bundle.toml
+++ b/vim/bundle.toml
@@ -132,6 +132,10 @@ repository = 'rosstimson/scala-vim-support'
 filetypes = 'scala'
 
 [[plugins]]
+repository = 'othree/yajs.vim'
+filetypes = 'javascript'
+
+[[plugins]]
 repository = 'keith/swift.vim'
 filetypes = 'swift'
 
