add applescript support for vim

--- a/vim/bundle.toml
+++ b/vim/bundle.toml
@@ -168,6 +168,10 @@ repository = 'plist.vim'
 filetypes = 'plist'
 
 [[plugins]]
+repository = 'applescript.vim'
+filetypes = 'applescript'
+
+[[plugins]]
 repository = 'digitaltoad/vim-jade'
 filetypes = 'jade'
 
