--- a/vim/bundle.toml
+++ b/vim/bundle.toml
@@ -144,6 +144,10 @@ repository = 'rosstimson/scala-vim-support'
 filetypes = 'scala'
 
 [[plugins]]
+repository = 'rust-lang/rust.vim'
+filetypes = 'rust'
+
+[[plugins]]
 repository = 'othree/yajs.vim'
 filetypes = 'javascript'
 
