add flowtype javascript support for vim

--- a/vim/bundle.toml
+++ b/vim/bundle.toml
@@ -203,3 +203,6 @@ build_commands = 'npm'
   [plugins.build]
   others = 'npm install'
 
+[[plugins]]
+repository = 'flowtype/vim-flow'
+filetypes = 'javascript'
