add vim plugins for kotlin

--- a/vim/bundle.toml
+++ b/vim/bundle.toml
@@ -151,6 +151,10 @@ repository = 'JuliaLang/julia-vim'
 filetypes = 'julia'
 
 [[plugins]]
+repository = 'udalov/kotlin-vim'
+filetypes = 'kotlin'
+
+[[plugins]]
 repository = 'rosstimson/scala-vim-support'
 filetypes = 'scala'
 
