--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,17 @@
-# improve colors
-set-option -g default-terminal screen-256color
+if-shell "[ `tmux-major-version` -eq 1 ]" "\
+  set-window-option -g utf8 on; \
+  set-option -g status-utf8 on; \
+  set-window-option -g mode-mouse on; \
+  set-option -g mouse-select-pane on; \
+  set-option -g mouse-resize-pane on; \
+  set-option -g mouse-select-window on"
 
-# status
+if-shell "[ `tmux-major-version` -eq 2 ]" "\
+  set-window-option -g mouse on"
+
+if-shell "[ \"`uname -s`\" = Darwin ]" "\
+  set-option -g default-command \"reattach-to-user-namespace -l $SHELL\""
+
 set-option -g status-fg colour227
 set-option -g status-bg colour233
 set-option -g status-position top
@@ -28,9 +38,3 @@ bind-key -t vi-copy C-n cursor-down
 bind-key -t vi-copy C-p cursor-up
 bind-key -t vi-copy C-f cursor-right
 bind-key -t vi-copy C-b cursor-left
-
-# mouse
-set-window-option -g mouse on
-
-# pasteboard
-# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
