--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,7 @@ set-option -g status-right '#[bg=colour234]%Y/%m/%d(%a) %H:%M'
 set-option -g status-interval 1
 set-option -g status-justify centre
 set-window-option -g window-status-current-attr bright
-set-window-option -g window-status-current-format '[#I-#P:#W]'
+set-window-option -g window-status-current-format '[#I-#P#F:#W]'
 
 # keybind
 unbind-key C-b
