--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ if-shell "[ `tmux-major-version` -eq 1 ]" "\
 if-shell "[ `tmux-major-version` -eq 2 ]" "\
   set-window-option -g mouse on"
 
-if-shell "[ \"`uname -s`\" = Darwin ]" "\
+if-shell "[ \"`uname -s`\" = Darwin ] && type reattach-to-user-namespace >/dev/null 2>&1" "\
   set-option -g default-command \"reattach-to-user-namespace -l $SHELL\""
 
 set-option -g status-fg colour227
@@ -31,10 +31,12 @@ bind-key C-t send-prefix
 bind-key | split-window -h
 bind-key - split-window -v
 set-window-option -g mode-keys vi
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-selection
-bind-key -t vi-copy Y copy-end-of-line
-bind-key -t vi-copy C-n cursor-down
-bind-key -t vi-copy C-p cursor-up
-bind-key -t vi-copy C-f cursor-right
-bind-key -t vi-copy C-b cursor-left
+
+if-shell "[ `tmux-major-version` -eq 2 ] && [ `tmux-minor-version` -lt 6 ]" "\
+  bind-key -t vi-copy v begin-selection; \
+  bind-key -t vi-copy y copy-selection; \
+  bind-key -t vi-copy Y copy-end-of-line; \
+  bind-key -t vi-copy C-n cursor-down; \
+  bind-key -t vi-copy C-p cursor-up; \
+  bind-key -t vi-copy C-f cursor-right; \
+  bind-key -t vi-copy C-b cursor-left"
