--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,8 @@ set-option -g status-right-length 90
 set-option -g status-right '#[bg=colour234]%Y/%m/%d(%a) %H:%M'
 set-option -g status-interval 1
 set-option -g status-justify centre
-set-window-option -g window-status-current-attr bright
+set-option -g mouse on
+set-window-option -g window-status-current-style bright
 set-window-option -g window-status-current-format '[#I-#P:#W]'
 set-window-option -g mode-keys vi
 
