Fix for tmux 3.x

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,10 +4,16 @@ if-shell "[ `tmux-major-version` -eq 1 ]" "\
   set-window-option -g mode-mouse on; \
   set-option -g mouse-select-pane on; \
   set-option -g mouse-resize-pane on; \
-  set-option -g mouse-select-window on"
+  set-option -g mouse-select-window on; \
+  set-window-option -g window-status-current-attr bright"
 
 if-shell "[ `tmux-major-version` -eq 2 ]" "\
-  set-window-option -g mouse on"
+  set-window-option -g mouse on; \
+  set-window-option -g window-status-current-attr bright"
+
+if-shell "[ `tmux-major-version` -eq 3 ]" "\
+  set-window-option -g mouse on; \
+  set-window-option -g window-status-current-style bright"
 
 if-shell "[ \"`uname -s`\" = Darwin ] && type reattach-to-user-namespace >/dev/null 2>&1" "\
   set-option -g default-command \"reattach-to-user-namespace -l $SHELL\""
@@ -21,7 +27,6 @@ set-option -g status-right-length 90
 set-option -g status-right '#[bg=colour234]%Y/%m/%d(%a) %H:%M'
 set-option -g status-interval 1
 set-option -g status-justify centre
-set-window-option -g window-status-current-attr bright
 set-window-option -g window-status-current-format '[#I-#P:#W]'
 
 # keybind
