--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/pack/dist/start/vim-visualstar"]
 	path = vim/pack/dist/start/vim-visualstar
 	url = https://github.com/thinca/vim-visualstar.git
+[submodule "vim/pack/dist/opt/plist.vim"]
+	path = vim/pack/dist/opt/plist.vim
+	url = https://github.com/vim-scripts/plist.vim.git
