--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,7 @@ if-shell "[ `tmux-major-version` -eq 3 ]" "\
 if-shell "[ \"`uname -s`\" = Darwin ] && type reattach-to-user-namespace >/dev/null 2>&1" "\
   set-option -g default-command \"reattach-to-user-namespace -l $SHELL\""
 
+set-option default-terminal "screen-256color"
 set-option -g status-fg colour227
 set-option -g status-bg colour233
 set-option -g status-position top
@@ -33,8 +34,9 @@ set-window-option -g window-status-current-format '[#I-#P:#W]'
 unbind-key C-b
 set-option -g prefix C-t
 bind-key C-t send-prefix
-bind-key | split-window -h
-bind-key - split-window -v
+bind-key | split-window -hc "#{pane_current_path}"
+bind-key - split-window -vc "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
 set-window-option -g mode-keys vi
 
 if-shell "[ `tmux-major-version` -eq 2 ] && [ `tmux-minor-version` -lt 6 ]" "\
